# land-transfer

./: .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.dev.yml  pyproject.toml  requirements.txt
land_transfer/: apps.py
project/: settings.py  urls.py
users/: admin.py  forms.py  managersnm.pyn  models.py  permissions.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_party_options.py  0002_transaction_file_path.py  0003_alter_property_area_alter_transaction_purchase_price.py  0003_alter_property_ownership_type.py  0004_alter_transactionassignment_transaction.py  0004_transaction_created_by.py  0005_alter_transactionassignment_assigned_by_and_more.py  0005_transaction_last_updated.py  0006_remove_transactionassignment_assigned_to_and_more.py  0006_rename_originating_district_transaction_received_from.py  0007_alter_customuser_options_inspection_image.py  0007_transactionassignment_assigned_by_and_more.py  0008_inspection_closed.py  0008_inspection_inspected_by.py  0009_dictionary_party_citizenship_party_dob_party_gender_and_more.py  0009_inspectionimage.py  0010_alter_inspectionimage_image.py  0010_rename_is_acre_verified_transaction_is_acre_done_and_more.py  0011_alter_transaction_property.py  0011_rename_file_path_inspection_document_file_and_more.py  0012_alter_property_area.py  0013_remove_transaction_file_path.py  0014_alter_transaction_options_and_more.py  0015_alter_property_id.py  0016_alter_property_id.py  0017_alter_transaction_property.py  0018_alter_transaction_options.py
